<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codModalidad" />
        <EditText
            android:id="@+id/editcodModalidad"
            android:inputType="text"
            android:maxLength="8" />
    </TableRow>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarModalidad"/>
    </LinearLayout>
    <TableRow>
        <TextView android:text="@string/nombModalidad" />
        <EditText
            android:id="@+id/editnombModalidad"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarModalidad"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>