<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_menu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActualizarTutorActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="1" >
        <TableRow>
            <TextView android:text="@string/codtutor" />
            <EditText
                android:id="@+id/editCodtutor"
                android:inputType="text"
                android:maxLength="7" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/codespecial" />
            <EditText
                android:id="@+id/editCodespecial"
                android:inputType="text"
                android:maxLength="7" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/nombre" />
            <EditText
                android:id="@+id/editNombre"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/apellido" />
            <EditText
                android:id="@+id/editApellido"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/cargo" />
            <EditText
                android:id="@+id/editCargo"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/sexo" />
            <RadioGroup
                android:id="@+id/editGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true">
                <RadioButton
                    android:id="@+id/radiobutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Femenino" />
                <RadioButton
                    android:id="@+id/radiobutton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Masculino" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <Button
                android:layout_marginTop="50dp"
                android:onClick="actualizarTutor"
                android:text="@string/actualizar" />
            <Button
                android:layout_marginLeft="70dp"
                android:layout_marginTop="50dp"
                android:onClick="limpiarTexto"
                android:text="@string/limpiar" />
        </TableRow>
    </TableLayout>
</RelativeLayout>