<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:paddingTop="20dp"
    android:fillViewport="true"
    android:background="@drawable/imagen1">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Datos."
                android:id="@+id/textView9"
                android:textSize="25dp"
                android:layout_column="0" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_column="1" />

        </TableRow>

        <TableRow>
            <TextView android:text="@string/carnet"/>
            <EditText
                android:id="@+id/carnet"
                android:inputType="text"
                android:maxLength="7"
                android:enabled="true"
                android:focusable="true" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/nombre" />
            <EditText
                android:id="@+id/nombre"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/apellido" />
            <EditText
                android:id="@+id/apellido"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrera"
                android:id="@+id/textView2"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carrera"
                android:layout_column="1" />

        </TableRow>

        <TableRow>
            <TextView android:text="@string/sexo" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sexo"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matganadas"
                android:id="@+id/textView"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/matganadas"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono1"
                android:id="@+id/textView3"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/telefono1"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono2"
                android:id="@+id/textView4"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/telefono2"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo1"
                android:id="@+id/textView5"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/correo1"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo2"
                android:id="@+id/textView6"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/correo2"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:id="@+id/textView7"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/direccion"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:text="@string/opciones"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <Button
                android:onClick="modificarAlumno"
                android:text="@string/modificar"
                android:clickable="true"/>
            <Button
                android:onClick="clearScreen"
                android:text="Atras"
                android:clickable="true" />
        </TableRow>

    </TableLayout>
</ScrollView>