<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_menu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".InsertarTutorActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:paddingTop="4dip" >
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codtutor"/>
            <EditText
                android:id="@+id/editCodtutor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="7"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codespecial"/>
            <EditText
                android:id="@+id/editCodespecial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="7"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:text="@string/eliminar"
                android:onClick="eliminarTutor"/>
            <Button
                android:layout_marginTop="50dp"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:text="@string/limpiar"
                android:onClick="limpiar"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>