<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_menu"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codencarg"/>
        <EditText
            android:id="@+id/editCodencarg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="7"/>
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/botonConsultar"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:onClick="consultarEncargS"/>
            <Button
                android:id="@+id/botonLimpiar"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:onClick="limpiarTexto"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido" />
        <EditText
            android:id="@+id/editApellido"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo" />
        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo" />
        <RadioGroup
            android:id="@+id/editGrupo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="100dp"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/radiobutton1"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Femenino" />
            <RadioButton
                android:id="@+id/radiobutton2"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Masculino" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
